--- a/review.css
+++ b/review.css
@@ -38,8 +38,6 @@ li{
     max-width: inherit;
     text-align: center;
     margin-bottom: 100px;
-    background-image: url("https://www.kmdb.or.kr/trailer/trailerPlayPop?pFileNm=MK060920_P02.mp4");
-    /* background-image: url("https://youtu.be/ZncbtRo7RXs?si=zcZw6U9U58GcpXXo"); */
     background-size: cover;
 }
 .poster_box{
@@ -54,6 +52,11 @@ li{
     left: 50%;
     transform: translateX(-50%);
     font-size: 40px;
+}
+
+#movie_poster > video{
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -114,6 +117,7 @@ li{
 .cast_list{
     display: flex;
     margin-top: 30px;
+    flex-wrap: wrap;
 }
 .cast_list li{
     margin-right: 20px;
