--- a/review.css
+++ b/review.css
@@ -31,30 +31,28 @@ li{
 
 
 /* 영화 포스터 이미지 섹션 */
-#movie_poster{
-    position: relative;
+#movie_poster_trailer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     width: 100%;
     height: 560px;
     max-width: inherit;
-    text-align: center;
     margin-bottom: 100px;
-    background-size: cover;
 }
 .poster_box{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.3);
-}
-.movie_title{
-    position: absolute;
-    bottom: 12%;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 40px;
+width: 35%;
 }
 
-#movie_poster > video{
+.poster_box > p{
+    font-size: 30px;
+}
+
+.trailer_box{
+    width: 60%;
+}
+
+.trailer_box > video{
     width: 100%;
     height: 100%;
 }
@@ -176,7 +174,7 @@ li{
 }
 .genre_list{
     display: flex;
-   
+   flex-wrap: wrap;
 }
 .genre_list li{
     margin-right: 20px;
